--- a/src/AppContent/package.json
+++ b/src/AppContent/package.json
@@ -15,54 +15,49 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "lightningcss": "^1.28.2",
-    "ol": "^10.3.1",
-    "pdfjs-dist": "^4.10.38",
-    "pixrem": "^5.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "lightningcss": "1.29.1",
+    "ol": "10.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "resize-observer-polyfill": "1.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@types/node": "^22.10.2",
-    "@types/pdfjs-dist": "^2.10.378",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "@vitejs/plugin-legacy": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "npm-watch": "^0.13.0",
-    "oldie": "^1.3.0",
-    "postcss": "^8.4.49",
-    "postcss-color-rgb": "^2.0.0",
-    "postcss-unrgba": "^1.1.1",
-    "sass": "^1.83.0",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.2",
-    "typescript": "^5",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.6",
-    "vite-plugin-css-injected-by-js": "^3.5.2",
-    "vite-plugin-dts": "^4.4.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-lib-inject-css": "^2.2.0",
-    "vite-plugin-sass": "^0.1.0"
+    "@eslint/compat": "1.2.5",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
+    "@rollup/plugin-babel": "6.0.4",
+    "@tailwindcss/container-queries": "0.1.1",
+    "@types/node": "22.10.7",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
+    "@vitejs/plugin-legacy": "6.0.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "10.4.20",
+    "dotenv-cli": "8.0.0",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "0.4.18",
+    "globals": "15.14.0",
+    "npm-watch": "0.13.0",
+    "postcss": "8.5.1",
+    "sass": "1.83.4",
+    "tailwindcss": "3.4.17",
+    "tsx": "4.19.2",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.21.0",
+    "vite": "6.0.11",
+    "vite-plugin-css-injected-by-js": "3.5.2",
+    "vite-plugin-dts": "4.5.0",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-lib-inject-css": "2.2.1",
+    "vite-plugin-sass": "0.1.0"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
