--- a/src/AppContent/package.json
+++ b/src/AppContent/package.json
@@ -15,6 +15,9 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@alx-home/pdfjs-dist": "5.0.35",
+    "geometry-polyfill": "1.0.7",
+    "js-sha512": "0.9.0",
     "lightningcss": "1.29.1",
     "ol": "10.3.1",
     "react": "19.0.0",
@@ -22,40 +25,41 @@
     "resize-observer-polyfill": "1.5.1"
   },
   "devDependencies": {
+    "@alx-home/pdfjs-dist-types": "2.10.377",
+    "@csstools/postcss-cascade-layers": "^5.0.1",
     "@eslint/compat": "1.2.5",
     "@eslint/eslintrc": "3.2.0",
-    "@eslint/js": "9.18.0",
+    "@eslint/js": "9.19.0",
     "@rollup/plugin-babel": "6.0.4",
     "@types/node": "^22.10.10",
-    "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@types/react": "19.0.8",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
     "@vitejs/plugin-legacy": "6.0.0",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "10.4.20",
     "dotenv-cli": "8.0.0",
-    "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.18",
+    "eslint-plugin-react": "7.37.4",
+    "eslint": "9.19.0",
     "globals": "15.14.0",
     "npm-watch": "0.13.0",
-    "postcss": "8.5.1",
-    "sass": "1.83.4",
-    "tailwindcss": "3.4.17",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "tsx": "4.19.2",
-    "typescript": "5.7.3",
     "typescript-eslint": "8.21.0",
-    "vite": "6.0.11",
+    "typescript": "5.7.3",
     "vite-plugin-css-injected-by-js": "3.5.2",
     "vite-plugin-dts": "4.5.0",
     "vite-plugin-eslint": "1.8.1",
-    "vite-plugin-lib-inject-css": "2.2.1"
+    "vite-plugin-lib-inject-css": "2.2.1",
+    "vite": "6.0.11"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
