--- a/package.json
+++ b/package.json
@@ -12,43 +12,45 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@microsoft/msfs-sdk": "^2.0.5"
+    "@microsoft/msfs-sdk": "2.0.5"
   },
   "dependencies": {
-    "@microsoft/msfs-sdk": "^2.0.5",
-    "@microsoft/msfs-types": "^1.14.6",
-    "@netless/canvas-polyfill": "^0.0.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "@vitejs/plugin-legacy": "^6.0.0",
-    "abortcontroller-polyfill": "^1.7.8",
-    "autoprefixer": "^10.4.20",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "npm-watch": "^0.13.0",
-    "vite-plugin-static-copy": "^2.2.0"
+    "@microsoft/msfs-sdk": "2.0.5",
+    "@microsoft/msfs-types": "1.14.6",
+    "@netless/canvas-polyfill": "0.0.4",
+    "@tailwindcss/container-queries": "0.1.1",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "@typescript-eslint/parser": "8.22.0",
+    "@vitejs/plugin-legacy": "6.0.0",
+    "abortcontroller-polyfill": "1.7.8",
+    "autoprefixer": "10.4.20",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "npm-watch": "0.13.0",
+    "vite-plugin-static-copy": "2.2.0"
   },
   "devDependencies": {
     "@alx-home/efb-api": "^1.0.0",
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.2",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.0.0",
-    "globals": "^15.14.0",
-    "rollup-plugin-external-globals": "^0.13.0",
-    "sass": "^1.83.0",
-    "tailwindcss": "^3.4.17",
-    "terser": "^5.37.0",
-    "typescript": "^5",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.6",
-    "vite-plugin-dts": "^4.4.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-lib-inject-css": "^2.2.0",
-    "vite-plugin-sass": "^0.1.0"
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
+    "@types/node": "22.10.10",
+    "cross-env": "7.0.3",
+    "dotenv": "16.4.7",
+    "eslint": "9.19.0",
+    "globals": "15.14.0",
+    "rollup-plugin-external-globals": "0.13.0",
+    "sass": "1.83.4",
+    "tailwindcss": "4.0.0",
+    "terser": "5.37.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.22.0",
+    "vite": "6.0.11",
+    "vite-plugin-dts": "4.5.0",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-lib-inject-css": "2.2.1",
+    "vite-plugin-sass": "0.1.0"
   }
 }
