Add setting to customize layer zoom level #48
closes #48

--- a/src/AppContent/tsconfig.json
+++ b/src/AppContent/tsconfig.json
@@ -55,8 +55,8 @@
       "@Events/*": [
         "./src/Events/*"
       ],
-      "@Settings": [
-        "./src/Settings.tsx"
+      "@Settings/*": [
+        "src/Settings/*"
       ],
       "@Utils/*": [
         "./src/Utils/*"
