Add Airports on the map with metar/... info #30
closes #30

--- a/src/AppContent/tsconfig.json
+++ b/src/AppContent/tsconfig.json
@@ -71,7 +71,12 @@
         "./public/*"
       ]
     },
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    // "plugins": [
+    //   {
+    //     "transform": "Transformer.ts"
+    //   }
+    // ]
   },
   "include": [
     "src/**/*.ts",
