--- a/src/AppContent/package.json
+++ b/src/AppContent/package.json
@@ -18,7 +18,7 @@
     "@alx-home/pdfjs-dist": "5.0.36",
     "geometry-polyfill": "1.0.7",
     "js-sha512": "0.9.0",
-    "lightningcss": "1.29.2",
+    "lightningcss": "1.29.3",
     "ol": "10.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -32,34 +32,34 @@
     "@eslint/js": "9.22.0",
     "@rollup/plugin-babel": "6.0.4",
     "@types/node": "22.13.10",
+    "@types/react": "19.0.11",
     "@types/react-dom": "19.0.4",
-    "@types/react": "19.0.10",
-    "@typescript-eslint/eslint-plugin": "8.26.0",
-    "@typescript-eslint/parser": "8.26.0",
+    "@typescript-eslint/eslint-plugin": "8.26.1",
+    "@typescript-eslint/parser": "8.26.1",
     "@vitejs/plugin-legacy": "6.0.2",
     "@vitejs/plugin-react": "4.3.4",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "10.4.21",
     "dotenv-cli": "8.0.0",
+    "eslint": "9.22.0",
     "eslint-config-prettier": "10.1.1",
-    "eslint-import-resolver-typescript": "3.8.3",
+    "eslint-import-resolver-typescript": "4.2.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.19",
-    "eslint-plugin-react": "7.37.4",
-    "eslint": "9.22.0",
     "globals": "16.0.0",
     "npm-watch": "0.13.0",
     "postcss": "8.5.3",
     "tailwindcss": "^3.4.17",
     "tsx": "4.19.3",
-    "typescript-eslint": "8.26.0",
     "typescript": "5.8.2",
+    "typescript-eslint": "8.26.1",
+    "vite": "6.2.2",
     "vite-plugin-css-injected-by-js": "3.5.2",
     "vite-plugin-dts": "4.5.3",
     "vite-plugin-eslint": "1.8.1",
-    "vite-plugin-lib-inject-css": "2.2.1",
-    "vite": "6.2.1"
+    "vite-plugin-lib-inject-css": "2.2.1"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
