--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@microsoft/msfs-sdk": "2.0.5"
+    "@microsoft/msfs-sdk": "2.0.7"
   },
   "dependencies": {
-    "@microsoft/msfs-sdk": "2.0.5",
+    "@microsoft/msfs-sdk": "2.0.7",
     "@microsoft/msfs-types": "1.14.6",
     "@netless/canvas-polyfill": "0.0.4",
     "@tailwindcss/container-queries": "0.1.1",
-    "@typescript-eslint/eslint-plugin": "8.26.0",
-    "@typescript-eslint/parser": "8.26.0",
-    "@vitejs/plugin-legacy": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "@vitejs/plugin-legacy": "6.1.1",
     "abortcontroller-polyfill": "1.7.8",
-    "autoprefixer": "10.4.20",
-    "eslint-config-prettier": "10.1.1",
-    "eslint-import-resolver-typescript": "3.8.3",
+    "autoprefixer": "10.4.21",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-import-resolver-typescript": "4.3.4",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "npm-watch": "0.13.0",
-    "vite-plugin-static-copy": "2.3.0"
+    "vite-plugin-static-copy": "2.3.1"
   },
   "devDependencies": {
     "@alx-home/efb-api": "^1.0.1",
-    "@eslint/compat": "1.2.7",
-    "@eslint/eslintrc": "3.3.0",
-    "@eslint/js": "9.22.0",
-    "@types/node": "22.13.10",
+    "@eslint/compat": "1.2.9",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.25.1",
+    "@types/node": "22.15.3",
     "cross-env": "7.0.3",
     "dotenv-cli": "8.0.0",
-    "dotenv": "16.4.7",
-    "eslint": "9.22.0",
+    "dotenv": "16.5.0",
+    "eslint": "9.25.1",
     "globals": "16.0.0",
     "rollup-plugin-external-globals": "0.13.0",
-    "sass": "1.85.1",
-    "tailwindcss": "4.0.12",
+    "sass": "1.87.0",
+    "tailwindcss": "^3.4.17",
     "terser": "5.39.0",
-    "tsx": "4.19.3",
-    "typescript-eslint": "8.26.0",
-    "typescript": "5.8.2",
+    "tsx": "4.19.4",
+    "typescript-eslint": "8.31.1",
+    "typescript": "5.8.3",
     "vite-plugin-dts": "4.5.3",
     "vite-plugin-eslint": "1.8.1",
-    "vite-plugin-lib-inject-css": "2.2.1",
+    "vite-plugin-lib-inject-css": "2.2.2",
     "vite-plugin-sass": "0.1.0",
-    "vite": "6.2.1"
+    "vite": "6.3.4"
   }
 }
