--- a/vfrnav_efb/app/package.json
+++ b/vfrnav_efb/app/package.json
@@ -28,5 +28,8 @@
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
-  ]
+  ],
+  "devDependencies": {
+    "jiti": "^2.4.2"
+  }
 }
