--- a/installer/main.rc
+++ b/installer/main.rc
@@ -15,5 +15,47 @@
 
 #include <windows.h>
 
+#include <Version.h>
+
 IDI_ICON1 ICON "../assets/vfrnav.ico"
 IDI_APPLICATION ICON "../assets/vfrnav.ico"
+
+VS_VERSION_INFO VERSIONINFO
+   FILEVERSION     VER_FILEVERSION
+   PRODUCTVERSION  VER_PRODUCTVERSION
+   FILEFLAGSMASK   0x3fL
+#ifdef _DEBUG
+   FILEFLAGS 0x1L
+#else
+   FILEFLAGS 0x0L
+#endif
+   FILEOS 0x40004L
+   FILETYPE 0x1L
+   FILESUBTYPE 0x0L
+
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "Comments", "\0"
+            VALUE "CompanyName",      VER_COMPANYNAME_STR
+            VALUE "FileDescription",  VER_FILEDESCRIPTION_STR
+            VALUE "FileVersion",      VER_FILEVERSION_STR
+            VALUE "InternalName",     VER_PRODUCTNAME_STR
+            VALUE "LegalCopyright",   VER_COPYRIGHT_STR
+            VALUE "LegalTrademarks",  "\0"
+            VALUE "OriginalFilename", "msfs2024-vfrnav_installer-int.exe\0"
+            VALUE "PrivateBuild",     "\0"
+            VALUE "ProductName",      VER_PRODUCTNAME_STR
+            VALUE "ProductVersion",   VER_PRODUCTVERSION_STR
+            VALUE "SpecialBuild",     "\0"
+        END
+    END
+
+    BLOCK "VarFileInfo"
+
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
