--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,15 @@ jobs:
               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
               SONAR_CERT_PWD: ${{ secrets.SONAR_CERT_PWD }}
+         - uses: jadewon/sonar-badge@v1
+           id: badge
+           env:
+              GITHUB_TOKEN: ${{ secrets.SONAR_REV_TOKEN }}
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+              SONAR_CERT_PWD: ${{ secrets.SONAR_CERT_PWD }}
+           with:
+              svgFrom: sonarqube
          # If you wish to fail your job when the Quality Gate is red, uncomment the
          # following lines. This would typically be used to fail a deployment.
          # - uses: SonarSource/sonarqube-quality-gate-action@v1
