--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,11 @@ jobs:
               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
               SONAR_CERT_PWD: ${{ secrets.SONAR_CERT_PWD }}
-         # If you wish to fail your job when the Quality Gate is red, uncomment the
-         # following lines. This would typically be used to fail a deployment.
-         - uses: SonarSource/sonarqube-quality-gate-action@v1
-           timeout-minutes: 5
-           env:
-              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-              SONAR_CERT_PWD: ${{ secrets.SONAR_CERT_PWD }}
+         # # If you wish to fail your job when the Quality Gate is red, uncomment the
+         # # following lines. This would typically be used to fail a deployment.
+         # - uses: SonarSource/sonarqube-quality-gate-action@v1
+         #   timeout-minutes: 5
+         #   env:
+         #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+         #      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+         #      SONAR_CERT_PWD: ${{ secrets.SONAR_CERT_PWD }}
