--- a/vfrnav_efb/EFB/release_notes.json
+++ b/vfrnav_efb/EFB/release_notes.json
@@ -193,9 +193,10 @@
             "     - Move \"Record settings\" to a new bottom toolbar / Paramètres de records déplacés dans une nouvelle barre d’outils en bas de l'EFB.",
             "     - Enable mouse wheel interaction for sliders / Interaction avec la molette de la souris ajoutée pour les curseurs.",
             "     - Added Navlog / Ajout d'un Navlog.",
-            "     - Port now sent to EFB via SimConnect / Le port est désormais transmis à l’EFB via SimConnect.",
             "     - Added a search bar to locate airports / Ajout d’une barre de recherche pour localiser les aéroports.",
             "**Installer/Server (new)**",
+            "  Improvements / améliorations:",
+            "     - Port now sent to EFB via SimConnect / Le port est désormais transmis à l’EFB via SimConnect.",
             "  Fixes:",
             "     - Memory leak resolved — Segfault fix / Fuite de mémoire corrigée — Résolution d'un Segfault."
          ]
