--- a/vfrnav_efb/app/package.json
+++ b/vfrnav_efb/app/package.json
@@ -20,11 +20,12 @@
     "chartjs": "0.3.24",
     "chartjs-plugin-dragdata": "2.3.1",
     "geometry-polyfill": "1.0.7",
-    "intl": "^1.2.5",
+    "intl": "1.2.5",
+    "js-sha256": "0.11.1",
     "js-sha512": "0.9.0",
     "lightningcss": "1.30.1",
     "ol": "10.6.1",
-    "pdfjs-dist": "5.3.31",
+    "pdfjs-dist": "5.3.93",
     "react": "19.1.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "19.1.0",
