--- a/vfrnav_efb/package.json
+++ b/vfrnav_efb/package.json
@@ -7,44 +7,44 @@
   "scripts": {},
   "devDependencies": {
     "@alx-home/pdfjs-dist-types": "2.10.377",
-    "@csstools/postcss-cascade-layers": "5.0.1",
-    "@eslint/compat": "1.2.9",
+    "@csstools/postcss-cascade-layers": "5.0.2",
+    "@eslint/compat": "1.3.1",
     "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.26.0",
+    "@eslint/js": "9.31.0",
     "@rollup/plugin-babel": "6.0.4",
-    "@types/node": "22.15.17",
-    "@types/react": "19.1.3",
-    "@types/react-dom": "19.1.3",
-    "@typescript-eslint/eslint-plugin": "8.32.0",
-    "@typescript-eslint/parser": "8.32.0",
-    "@vitejs/plugin-legacy": "6.1.1",
-    "@vitejs/plugin-react": "4.4.1",
+    "@types/node": "24.0.13",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "8.36.0",
+    "@typescript-eslint/parser": "8.36.0",
+    "@vitejs/plugin-legacy": "7.0.0",
+    "@vitejs/plugin-react": "4.6.0",
     "autoprefixer": "10.4.21",
     "cross-env": "7.0.3",
-    "dotenv": "16.5.0",
+    "dotenv": "17.2.0",
     "dotenv-cli": "8.0.0",
-    "eslint": "9.26.0",
+    "eslint": "9.31.0",
     "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.3.4",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
-    "globals": "16.1.0",
-    "jiti": "^2.4.2",
+    "globals": "16.3.0",
+    "jiti": "2.4.2",
     "npm-watch": "0.13.0",
-    "postcss": "8.5.3",
+    "postcss": "8.5.6",
     "rollup-plugin-external-globals": "0.13.0",
-    "sass": "1.87.0",
+    "sass": "1.89.2",
     "tailwindcss": "^3.4.17",
-    "terser": "5.39.0",
-    "tsx": "4.19.4",
+    "terser": "5.43.1",
+    "tsx": "4.20.3",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.32.0",
-    "vite": "6.3.5",
+    "typescript-eslint": "8.36.0",
+    "vite": "7.0.4",
     "vite-plugin-css-injected-by-js": "3.5.2",
-    "vite-plugin-dts": "4.5.3",
+    "vite-plugin-dts": "4.5.4",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-lib-inject-css": "2.2.2",
     "vite-plugin-sass": "0.1.0"
