--- a/vfrnav_efb/EFB/release_notes.json
+++ b/vfrnav_efb/EFB/release_notes.json
@@ -149,7 +149,7 @@
             "     - Added the ability to load PDF files from the computer / Ajout de la possibilité de charger des fichiers PDF depuis le PC.",
             "     - Added functionality to open the EFB directly from the app, enhancing preflight and postflight navigation / Ajout de la fonctionnalité permettant d'ouvrir l'EFB directement depuis l'application, améliorant la navigation pré et post vol.",
             "",
-            "**EFB**",
+            "### EFB ###",
             "  Improvements / améliorations:",
             "     - Increased text size in AZBA and airport information popups / Augmentation de la taille du texte des popups AZBA et des informations sur les aéroports.",
             "     - Enhanced the visual presentation of AZBA and airport information popups / Amélioration de la présentation des popups AZBA et des informations sur les aéroports."
@@ -159,7 +159,7 @@
          "version": "1.0.1",
          "date": "MAY 26, 2025",
          "notes": [
-            "**EFB**",
+            "### EFB ###",
             "  Improvements / améliorations:",
             "     - Show server status on the \"local\" tab of the PDF popup / Afficher le statut du serveur sur l'onglet \"local\" du popup PDF.",
             "     - Fix validation of the SIA input field / Corriger la validation du champ SIA."
@@ -179,7 +179,7 @@
          "version": "1.2.0",
          "date": "JUN 15, 2025",
          "notes": [
-            "**EFB**",
+            "### EFB ###",
             "  Improvements / améliorations:",
             "     - Add OpenAPI Layer (preview; performance is not optimized, there are some glitches) / Ajout du layer OpenAPI (aperçu; les performances ne sont pas optimisées, possède quelques glitches)."
          ]
@@ -188,7 +188,7 @@
          "version": "1.3.0",
          "date": "JUL 6, 2025",
          "notes": [
-            "**EFB**",
+            "### EFB ###",
             "  Improvements / améliorations:",
             "     - Move \"Record settings\" to a new bottom toolbar / Paramètres de records déplacés dans une nouvelle barre d’outils en bas de l'EFB.",
             "     - Enable mouse wheel interaction for sliders / Interaction avec la molette de la souris ajoutée pour les curseurs.",
@@ -205,7 +205,7 @@
          "version": "1.3.1",
          "date": "JUL 13, 2025",
          "notes": [
-            "**EFB**",
+            "### EFB ###",
             "  Improvements / améliorations:",
             "     - Automatically adjust font and icon sizes based on DPI changes / Ajuste dynamiquement la taille des polices et des icônes selon les changements de DPI.",
             "  Fixes:",
@@ -220,8 +220,8 @@
          "version": "1.3.2",
          "date": "JUL 14, 2025",
          "notes": [
-            "**EFB**",
-            "  🔧 Improvements / Améliorations:",
+            "### EFB ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Enhanced display of SIA/airport information pop-ups for better readability and user interaction.",
             "       Amélioration de l'affichage des fenêtres contextuelles d'information SIA/aéroport pour une meilleure lisibilité et interaction utilisateur.",
             "     - Integrated option to download chart PDFs directly from the SIA source within airport information pages.",
@@ -235,8 +235,8 @@
          "version": "1.4.0",
          "date": "AUG 04, 2025",
          "notes": [
-            "**EFB**",
-            "  🔧 Improvements / Améliorations:",
+            "### EFB ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Enhanced display of Records layer (now in 3D).",
             "       Amélioration de l'affichage des enregistrement de vols (maintenant en 3D).",
             "     - Optimize Records layer performance.",
@@ -252,8 +252,8 @@
          "version": "1.4.1",
          "date": "AUG 04, 2025",
          "notes": [
-            "**EFB**",
-            "  🔧 Improvements / Améliorations:",
+            "### EFB ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Add map rotation support to records layer (alt+shift+drag for rotation).",
             "       Ajout du support de la rotation de la map au layer d'enregistrement de vols (alt+shift+drag pour la rotation).",
             "     - Add the option to offset records on records layer.",
@@ -264,12 +264,26 @@
          "version": "1.4.2",
          "date": "AUG 05, 2025",
          "notes": [
-            "**EFB**",
-            "  🔧 Improvements / Améliorations:",
+            "### EFB ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Add map rotation support to navigation layer (alt+shift+drag for rotation).",
             "       Ajout du support de la rotation de la map au layer de navigation (alt+shift+drag pour la rotation).",
             "     - Improve flight recording layer display.",
             "       Amélioration de l'affichage du layer d'enregistrement de vols."
+         ]
+      },
+      {
+         "version": "1.4.3",
+         "date": "AUG 05, 2025",
+         "notes": [
+            "### EFB ###",
+            "***🔧 Improvements / Améliorations:***",
+            "     - Added slope option to record layer rules.",
+            "       Ajout d'une option de pente aux règles du layer d'enregistrement de vols.",
+            "     - Enhanced toolbar display for the record layer.",
+            "       Amélioration de l'affichage de la barre d'outils du layer d'enregistrement de vols.",
+            "     - New option to display partial records in the record layer.",
+            "       Ajout de la possibilité d'afficher uniquement une partie du record dans le layer d'enregistrement de vols."
          ]
       }
    ]
