Modify Installer to Prevent False Trojan Alerts #135
Fixes #135

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,10 @@ get_all_targets(ALL_TARGETS ${CMAKE_CURRENT_LIST_DIR})
 foreach(VARIABLE ${ALL_TARGETS})
    if(VARIABLE MATCHES "^boost_.*$")
       set_property(TARGET ${VARIABLE} PROPERTY FOLDER "VFRNav/Core/Packages/Boost")
+   elseif(VARIABLE MATCHES "^upx.*$")
+      set_property(TARGET ${VARIABLE} PROPERTY FOLDER "VFRNav/Tools/upx")
+   elseif(VARIABLE MATCHES "^(Continuous|Nightly|Experimental).*$")
+      set_property(TARGET ${VARIABLE} PROPERTY FOLDER "VFRNav/Tools/upx/CTestDashboardTargets/")
    elseif(VARIABLE MATCHES "^zlib.*|example|minigzip$")
       set_property(TARGET ${VARIABLE} PROPERTY FOLDER "VFRNav/Core/Packages/zlib")
    elseif(VARIABLE MATCHES "^alx-home_.*|promise_test$")
