--- a/installer/CMakeLists.txt
+++ b/installer/CMakeLists.txt
@@ -44,9 +44,15 @@ set(REVISION 0)
 
 set(VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${REVISION})
 
+add_dependencies(installer upx)
+
 set_target_properties(installer PROPERTIES VERSION ${MAJOR_VERSION})
 set_target_properties(installer PROPERTIES SOVERSION ${MAJOR_VERSION}.${MINOR_VERSION})
 set_target_properties(installer PROPERTIES OUTPUT_NAME "msfs2024-vfrnav_installer")
+
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_custom_command(TARGET installer POST_BUILD COMMAND $<TARGET_FILE:upx> --brute $<TARGET_FILE:installer>)
+endif()
 
 target_link_libraries(installer PRIVATE
     alx-home::windows
