Add VERBATIM option to custom_command

--- a/installer/CMakeLists.txt
+++ b/installer/CMakeLists.txt
@@ -51,7 +51,11 @@ set_target_properties(installer PROPERTIES SOVERSION ${MAJOR_VERSION}.${MINOR_VE
 set_target_properties(installer PROPERTIES OUTPUT_NAME "msfs2024-vfrnav_installer")
 
 if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_custom_command(TARGET installer POST_BUILD COMMAND $<TARGET_FILE:upx> --brute $<TARGET_FILE:installer>)
+    add_custom_command(TARGET installer POST_BUILD
+        COMMAND $<TARGET_FILE:upx> --brute $<TARGET_FILE:installer>
+        COMMENT "Zipping executable (may takes some times...)"
+        VERBATIM
+    )
 endif()
 
 target_link_libraries(installer PRIVATE
